workspace-sf/force-app/main/default/objects/API_Link_de_Pagamento__mdt/API_Link_de_Pagamento__mdt.object-meta.xml
<CustomObject>
    <label>API Link de Pagamento</label>
    <pluralLabel>API Link de Pagamento</pluralLabel>
</CustomObject>