workspace-sf/force-app/main/default/objects/API_Link_de_Pagamento__mdt/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>CLIENT_ID</label>
    <type>TextArea</type>
</CustomField>