workspace-sf/force-app/main/default/objects/API_Link_de_Pagamento__mdt/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <label>endpoint</label>
    <type>TextArea</type>
</CustomField>