workspace-sf/force-app/main/default/objects/API_Link_de_Pagamento__mdt/fields/expiraEm__c.field-meta.xml
<CustomField>
    <fullName>expiraEm__c</fullName>
    <label>expiraEm</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>