workspace-sf/force-app/main/default/objects/API_Link_de_Pagamento__mdt/fields/secret_id__c.field-meta.xml
<CustomField>
    <fullName>secret_id__c</fullName>
    <label>SECRET_ID</label>
    <type>TextArea</type>
</CustomField>