workspace-sf/force-app/main/default/objects/API_Link_de_Pagamento__mdt/fields/timeOut__c.field-meta.xml
<CustomField>
    <fullName>timeOut__c</fullName>
    <label>timeOut</label>
    <length>6</length>
    <type>Text</type>
</CustomField>