workspace-sf/force-app/main/default/objects/API_Link_de_Pagamento__mdt/fields/token_url__c.field-meta.xml
<CustomField>
    <fullName>token_url__c</fullName>
    <label>TOKEN_URL</label>
    <type>TextArea</type>
</CustomField>